--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "next": "^16.0.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@supabase/supabase-js": "^2.86.0",
+    "@google/genai": "^1.31.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.30",
+    "autoprefixer": "^10.4.15",
+    "typescript": "^5",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "eslint-config-next": "^16.0.7"
   }
 }
